--- a/PAGES/01c_vscode/index.html
+++ b/PAGES/01c_vscode/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Features and Keyboard Shortcuts</h2></p>
-<p>We present a few handy features and keyboard shortcuts for <a href="https://code.visualstudio.com/">VS Code</a>, and its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, several of them can be used regardless of the programming language you&#39;re running. </p>
-<p>Each feature discussed includes a gif for a visual illustration. Simply click &quot;Example&quot; to see them in action, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
+<p>We present keyboard shortcuts and handy features for <a href="https://code.visualstudio.com/">VS Code</a> and its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, these features are largely language-agnostic, holding regardless of the programming language you&#39;re working with. </p>
+<p>The features discussed are accompanied by GIFs for visual illustration. To view these GIFs, simply click &quot;Example&quot;, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
 <div class="vscode_bullets"><p> <h4> To run a script </h4>  Select the script to be executed and press  <kbd> Ctrl+Enter</kbd>  <div> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex09.gif"/>
     </p></details></div> </p>
@@ -2831,9 +2831,9 @@ color: white;
 <p> <h4> To extend the cursor vertically </h4>  Hold down  <kbd> Alt+Ctrl</kbd> &#43; press  <kbd> 🠙</kbd> or  <kbd> 🠛</kbd> <br/>  <div> <details><summary> Example  </summary>
     <p> <img style="width:70%;height:70%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex01.gif"/>
     </p></details></div> </p>
-<p> <h4> To see the documentation of a function </h4>  Hover over the function  <div> <details><summary> Example  </summary>
+<p> <h4> To see the documentation of a function </h4>  It requires hovering over the function.  <div> <details><summary> Example  </summary>
     <p> <img style="width:100%;height:100%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex02.gif"/>
-    </p></details></div>  Alternatively, you can go the REPL, press  <kbd> ?</kbd>, and then type the function&#39;s name you want to search for.  <div> <details><summary> Example  </summary>
+    </p></details></div><br/> Alternatively, you can go the REPL, press  <kbd> ?</kbd>, and then type the function&#39;s name you want to search for.  <div> <details><summary> Example  </summary>
     <p> <img style="width:80%;height:80%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex03.gif"/>
     </p></details></div> </p>
 <p> <h4> To autocomplete a word </h4>  Start typing a word &#43; press  <kbd> Tab</kbd> when you see the option list  <div> <details><summary> Example  </summary>
@@ -2841,7 +2841,7 @@ color: white;
     </p></details></div> </p>
 <p> <h4> To introduce unicode characters &#40;Tab Completion&#41; </h4>  Type a unicode character/command, press  <kbd> Ctrl</kbd> &#43;  <kbd> Space</kbd> to open an option list, and then choose the option and press  <kbd> Tab</kbd>  <div> <details><summary> Example  </summary>
     <p> <img style="width:90%;height:90%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex04.gif"/>
-    </p></details></div>  In Julia, Greek letters and math have the same syntax as Latex. To add them, you need to start with <code>\</code> &#40;e.g., <code>\eq</code> for <code>≠</code>&#41; and use Tab completion.</p>
+    </p></details></div><br/>  In Julia, Greek letters and math have the same syntax as Latex. To add them, you need to start with <code>\</code> &#40;e.g., <code>\eq</code> for <code>≠</code>&#41; and use Tab completion.</p>
 <p> <h4> To select the same word multiple times </h4> Select the word and then press  <kbd> Ctrl+d</kbd> for selecting each additional time it appears. This is useful when you want to change part of the expression.  <div> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex08.gif"/>
     </p></details></div> </p>
@@ -2875,7 +2875,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
