--- a/PAGES/01d_tips/index.html
+++ b/PAGES/01d_tips/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Remarks</h2></p>
-<p>We start by reviewing various suggestions to write code. They represent a minimum set of good practices and apply regardless of the programming language used. By adhering to these guidelines, you&#39;ll be able to write clear and maintainable code. I suggest incorporating these suggestions into your workflow from the very beginning, as it&#39;ll turn the learning process smoother.</p>
-<p>Several of the suggestions we present might seem inconsequential to you at this point, or give the impression that their importance is exaggerated. For small projects, there&#39;s some truth to this—they won&#39;t have a substantial impact.  However, as projects grow in size and complexity, following these principles becomes crucial. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For real-world examples, read the section &quot;Brief Story&quot; of this <a href="https://blog.unosquare.com/10-tips-for-writing-cleaner-code-in-any-programming-language">link</a> or <a href="https://news.ycombinator.com/item?id&#61;18442941">the perspective of a former worker from Oracle</a>.  </span></span>  It&#39;s not uncommon for developers to revisit their own code after a few months &#40;or days&#33;&#41; and struggle to understand it. When this occurs, extending the code becomes a daunting task, often resulting in non-reusable code.</p>
+<p>We start by reviewing various principles to write code. They represent a minimum set of good practices and apply regardless of the programming language used. By adhering to these guidelines, you&#39;ll be able to write clear and maintainable code. I suggest incorporating these suggestions into your workflow from the very beginning, as it&#39;ll turn the learning process smoother.</p>
+<p>Several of the suggestions we present might seem inconsequential to you at this point, or give the impression that their importance is exaggerated. For small projects, there&#39;s some truth to this—they won&#39;t have a substantial impact.  However, as projects grow in size and complexity, following these principles becomes crucial. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For real-world examples, read &quot;Brief Story&quot; on this <a href="https://blog.unosquare.com/10-tips-for-writing-cleaner-code-in-any-programming-language">link</a> or <a href="https://news.ycombinator.com/item?id&#61;18442941">the perspective of a former worker from Oracle</a>.  </span></span>  It&#39;s not uncommon for developers to revisit their own code after a few months &#40;or days&#33;&#41; and struggle to understand it. When this occurs, extending the code becomes a daunting task, often resulting in non-reusable code.</p>
 <p>As usual, the devil is in the details. Thus, the challenge lies in interpreting and implementing these suggestions effectively. Many of them rely on the reader&#39;s judgment, as they require a subjective assessment of when and how to apply them. For example, one suggestion we&#39;ll present is to use clear and descriptive names. However, determining what constitutes &quot;clear&quot; or &quot;unclear&quot; is ultimately a matter of personal interpretation. Hopefully, the implementation of the suggestions will become apparent as we move forward and apply these concepts.</p>
 <p>      </div>
     </div>
@@ -2926,7 +2926,7 @@ more_calcs         &#61; this_is_a_variable * another_var</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
