--- a/PAGES/02a_overview/index.html
+++ b/PAGES/02a_overview/index.html
@@ -2819,16 +2819,16 @@ color: white;
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     Throughout the book, I made some deliberate choices regarding whether and when to introduce certain subjects. Considering this, I&#39;ll include a section called &quot;Overview and Goals&quot; prior to each chapter, which elucidates my rationale for these choices. The goal is to contextualize the book&#39;s approach, offering readers some guidance on the best way to engage with the material.  </div>  </div>
-<p>The current chapter introduces the concept of variables and types, covering single-element objects &#40;numbers and text&#41; and collections &#40;primarily vectors&#41;. At this early stage, <strong>we only scratch the surface of the topics</strong>. In particular, the chapter doesn&#39;t cover any of the objects in depth, and even excludes important ones like dictionaries. The reason is pedagogical: I didn&#39;t want to overwhelm readers with details about objects or types, considering that core programmatic concepts like functions and loops haven&#39;t yet been introduced. </p>
+<p>The current chapter introduces the concept of variables and types, covering single-element objects &#40;numbers and text&#41; and collections &#40;primarily vectors&#41;. At this early stage, <strong>we only scratch the surface of the topics</strong>. In particular, the chapter doesn&#39;t cover any object in depth, and even excludes important ones like dictionaries. The reason is pedagogical: I didn&#39;t want to overwhelm readers with details about objects or types, considering that core programmatic concepts like functions and for-loops haven&#39;t yet been introduced. </p>
 <p>In light of this, Chapter 2 should be understood as a minimal background on objects, sufficient for progressing into the basics of working programmatically.</p>
 <p>The main skills you should gain from Chapter 2 are:</p>
 <ul>
 <li><p>familiarizing yourself with Julia&#39;s syntax, and</p>
 </li>
-<li><p>distinguishing between numbers and vectors, as examples of single-element objects and collections.</p>
+<li><p>distinguishing between scalars &#40;single-element objects&#41; and collections.</p>
 </li>
 </ul>
- <div style="visibility: hidden;margin-bottom:-4em">
+ <div style="visibility:hidden; margin-bottom:-4em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
@@ -2857,7 +2857,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
