--- a/PAGES/02d_strings/index.html
+++ b/PAGES/02d_strings/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section provides a concise overview of standard types for text representation, covering the fundamental concepts of introducing text and string interpolation. Although in-depth string analysis isn&#39;t necessary, understanding these basic principles are essential for using Julia effectively.</p>
+<p>This section presents standard types for text representation, where we distinguish between characters and strings. The coverage will be concise, as the website won&#39;t focus on string analysis.</p>
 <p>      </div>
     </div>
   </div>
@@ -2936,7 +2936,7 @@ output_text     &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * g
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
