--- a/PAGES/02e_arrays/index.html
+++ b/PAGES/02e_arrays/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>So far, we&#39;ve explored numeric and string variables, which can be interpreted as single-element objects. Now, we&#39;ll shift our focus to <span style="color: rgb(62, 121, 180);"><strong>collections</strong></span>, defined as <strong>variables comprising multiple elements</strong>.</p>
+<p>So far, we&#39;ve explored variables representing single-element objects. Now, we&#39;ll shift our focus to <span style="color: rgb(62, 121, 180);"><strong>collections</strong></span>, defined as <strong>variables comprising multiple elements</strong>.</p>
 <p>Julia provides several forms of collections, including:</p>
 <ul>
 <li><p>Arrays &#40;including vectors and matrices&#41;</p>
@@ -3033,7 +3033,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
