--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2817,7 +2817,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Defining Mutability</h2></p>
 <p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> are designed to be flexible, allowing their elements to be modified, appended, or removed at will. A prime example of mutable objects is <strong>vectors</strong>.</p>
-<p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent any additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes. Additionally, it can potentially lead to performance enhancements. Common examples of immutable objects include <strong>tuples</strong>, which remain fixed once created. </p>
+<p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent any additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes, and potentially leading to performance enhancements. Common examples of immutable objects include <strong>tuples</strong>, which remain fixed once created. </p>
 <p>This section will be relatively brief, focusing solely on the distinctions between mutable and immutable objects. Subsequent sections will expand on their uses and properties.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
@@ -2917,7 +2917,7 @@ pop&#33;&#40;x&#41;           # error, just like push&#33;&#40;x, &lt;some eleme
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
