--- a/PAGES/11b_multithread_intro/index.html
+++ b/PAGES/11b_multithread_intro/index.html
@@ -2834,7 +2834,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>A proper implementation of multithreading necessitates some basic understanding of the inner workings of computers. In particular, it&#39;s essential to identify how programming languages handle dependency between operations. Grasping these concepts is especially relevant for multithreading, since this technique exposes the user to the risk of writing unsafe code: a flawed implementation may introduce bugs that yield incorrect results. </p>
+<p>A proper implementation of multithreading demands some basic understanding of the inner workings of computers. In particular, it&#39;s essential to identify how programming languages handle dependency between operations. Grasping these concepts is especially relevant for multithreading, since the technique exposes the user to the risk of writing unsafe code: a flawed implementation may yield incorrect results. </p>
 <p>This section will only present preliminaries concepts, setting the stage for subsequent sections. The focus will be on explanations rather than actual implementations of multithreading. In fact, most of the macros and functions introduced here won&#39;t be utilized again.</p>
 <p>      </div>
     </div>
@@ -3263,7 +3263,7 @@ println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
