--- a/PAGES/11g_multithread_packages/index.html
+++ b/PAGES/11g_multithread_packages/index.html
@@ -2846,7 +2846,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Package "OhMyThreads" </h2></p>
-<p>As the package&#39;s documentation claims, <a href="https://github.com/JuliaFolds2/OhMyThreads.jl"><code>OhMyThreads</code></a> strives to be a user-friendly package to seamlessly apply multithreading. Consistent with its minimalist approach, the package only introduces a handful of essential functionalities that could easily be part of Julia&#39;s <code>Base</code>. The goal is to make it possible to parallelize code, even without deep expertise in concurrent programming techniques.</p>
+<p>As the package&#39;s documentation claims, <a href="https://github.com/JuliaFolds2/OhMyThreads.jl"><code>OhMyThreads</code></a> strives to be a user-friendly package to seamlessly apply multithreading. Consistent with its minimalist approach, the package only introduces a handful of essential functionalities that could easily be part of Julia&#39;s <code>Base</code>. The goal is to implement code parallelization, even without deep expertise in concurrent programming techniques.</p>
 <p>Specifically, the package provides various higher-order functions and macros that internally handle data-race conditions and performance issues like false sharing. Despite its simplicity, <code>OhMyThreads</code> still covers a significant range of scenarios, even supporting reduction operations.</p>
 <p>In the following, we present the main higher-functions provided by the package. Before introducing them, we indicate several features that these functions share. Firstly, their names in <code>OhMyThreads</code> mirror those in <code>Base</code>, but adding a prefix of <code>t</code>. For instance, the counterpart to <code>map</code> is <code>tmap</code>. Secondly, <code>OhMyThreads</code> offers the option of customizing the parallelization process. This is achieved though an integration with <code>ChunkSplitters</code>, enabling customized work distributions among tasks via two keyword arguments: <code>nchunks</code>&#40;or equivalently <code>ntasks</code>&#41; to define the number of subsets in the partition, and <code>chunksize</code> to specify the number of elements in each subset.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
@@ -3587,7 +3587,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
