--- a/PAGES/02f_tuples/index.html
+++ b/PAGES/02f_tuples/index.html
@@ -2816,12 +2816,12 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We continue our exploration of collections, defined as objects that store multiple elements. Having previously focused on arrays, we&#39;ll now turn our attention to another form of collection: tuples. </p>
-<p>The defining characteristic of tuples is that they&#39;re fixed in size and immutable. This means that, once a tuple is created, its elements cannot be added, removed, or modified. While these restrictions might initially seem limiting, they also bring a performance advantage when working with small collections.</p>
-<p>At this point, we&#39;ll only scratch the surface of tuples, covering just the basics needed to use them in relation to functions. A more in-depth exploration of tuples will follow in Part II, where we&#39;ll have developed the necessary tools to fully appreciate their relevance.</p>
+<p>We continue our exploration of collections, defined as objects that store multiple elements. Having previously focused on arrays, we&#39;ll now turn our attention to another form of collection known as  <em>tuples</em>. </p>
+<p>The defining characteristic of tuples is their fixed size and immutability. This implies that, once a tuple is created, its elements cannot be added, removed, or modified. While these restrictions might initially seem restrictive, they also bring a performance advantage when working with small collections.</p>
+<p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to fully appreciate their relevance.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content> <strong>Tuples should only be used when the number of elements is small</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. Keep using vectors for large collections.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content> <strong>Tuples should only be used when the number of elements is small</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. For large vectors, you should keep relying on vectors.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2832,7 +2832,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Definition of Tuples</h2></p>
 <p>The syntax for accessing the  <em>i</em>-th element of a tuple <code>x</code> is similar to vectors, requiring <code>x&#91;i&#93;</code>. Instead, their definition requires enclosing its elements in parentheses <code>&#40;&#41;</code>, rather than the square brackets <code>&#91;&#93;</code> as in vectors.</p>
-<p>When tuples comprise more than one element, the use of <code>&#40;&#41;</code> is optional. Their omission in fact is a common practice. On the contrary, single-element tuples have stricter syntax rules: you must use parentheses <code>&#40;&#41;</code> and a trailing comma <code>,</code> after the element. For example, a tuple with the single element <code>10</code> is represented as <code>&#40;10,&#41;</code>. This should be distinguished from the expression <code>&#40;10&#41;</code>, which would simply be interpreted as the number 10.</p>
+<p>When tuples comprise more than one element, the use of <code>&#40;&#41;</code> is optional and its omission is in fact a common practice. On the contrary, single-element tuples have stricter syntax rules: you must use parentheses <code>&#40;&#41;</code> and a trailing comma <code>,</code> after the element. For example, a tuple with the single element <code>10</code> is represented as <code>&#40;10,&#41;</code>. This notation distinguishes a tuple from the expression <code>&#40;10&#41;</code>, which would simply be interpreted as the number 10.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2884,7 +2884,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>y</code><br/><div class="akin_to_pre">5</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>As we&#39;ll see, this technique is commonly employed when a function returns multiple values. The approach enables you to unpack the returned values into individual variables, through a single concise statement.</p>
+<p>As we&#39;ll see, this technique is commonly employed when a function returns multiple values. Through a single concise statement, the approach enables you to unpack the returned values into individual variables.</p>
 <p>      </div>
     </div>
   </div>
@@ -2907,7 +2907,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 28, 2025 
+          © Martin Alfaro <br>Last Modified March 6, 2025 
       </span> 
   </div> 
 </footer>
